# SVD-Jacobi-MPI-OMP

./: .gitignore  CMakeLists.txt  README.md  main.cpp  reporte-dimension-1000-time-23-06-2023-13-53-37.txt  reporte-dimension-2000-time-23-06-2023-13-55-19.txt
lib/: JacobiMethods.cpp  JacobiMethods.h  Matrix.h  Utils.cpp  Utils.h  global.h
tests/: Tests.cpp  Tests.h
